--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 /**
  * Place your custom styles here.
  */
+.logo img{
+    width:32px;
+    height: 32px;
+}
+
+.input-group-btn:last-child > .btn{
+    padding: 6px 16px;
+    font-size: 16px;
+    height:50px;
+}
+.input-group .form-control:first-child{
+    height: 50px;
+    font-size: 16px;
+}
