--- a/templates/block/block--search.html.twig
+++ b/templates/block/block--search.html.twig
@@ -39,6 +39,7 @@
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
+    'col-md-3'
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
