--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,23 @@
 
 .input-group-btn:last-child > .btn{
     padding: 6px 16px;
-    font-size: 16px;
+    font-size: 22px;
     height:50px;
 }
 .input-group .form-control:first-child{
     height: 50px;
     font-size: 16px;
+}
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border-color: #e7e7e7;
+    font-size: 16px;
+}
+.input-group .form-control{
+    border-radius: 0;
+}
+.button{
+    border-radius: 0;
+}
+.navbar, .navbar-default{
+    border-radius: 0;
 }
